--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html lang="pt-br">
  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>libras</title>
-</head>
+  </head>
 <body>
-    <h1>maria</h1>
-</body>
     <header class="cabecalho">
-    <h1 class="cabecalho-titulo">libras básico I</h1>
-    <nav class="cabecalho-menu">
+      <h1 class="cabecalho-titulo">Libras Básico</h1>
+      <nav class="cabecalho-menu">
         <ul>
-            <li><a class="cabecalho-menu-item" href="#">letras</a></li>
-        </ul>
+            <li><a class="cabecalho-menu-item" href="#">Letras</a></li>
+            <li><a class="cabecalho-menu-item" href="#">Palavras</a></li>
+            <li><a class="cabecalho-menu-item" href="#">Frases</a></li>
+         </ul>
+        </nav>
     </header>
+ </body>
 </html>
+
 
 
